@startuml class-diagram-us081
skinparam shadowing false
skinparam classAttributeIconSize 0

package "UI Layer" {
    class CreateFlightPlanFromFileUI {
        +doShow() : boolean
        +headline() : String
    }
}

package "Application Layer" {
    class CreateFlightPlanFromFileController <<UseCaseController>> {
        -authz : AuthorizationService
        -repository : FlightPlanRepository
        -parser : FlightPlanParserFacade
        +createFromFile(filePath : String) : FlightPlan
        -readFile(filePath : String) : String
        -buildErrorMessage(errors : List<ParseError>) : String
    }
}

package "DSL Layer" {
    class FlightPlanParserFacade {
        +parse(inputDsl : String) : ParseResult
    }

    class FlightPlanValidationListener <<listener>> {
        -errors : List<ParseError>
        +FlightPlanValidationListener(errors)
        +exitWindDecl(ctx) : void
        +exitCoordinate(ctx) : void
    }

    class FlightPlanAstBuilderVisitor <<visitor>> {
        +visitFlight(ctx) : FlightPlanAst
        +visitLeg(ctx) : LegAst
        +visitSegment(ctx) : SegmentAst
        +visitDeparture(ctx) : EndpointAst
        +visitArrival(ctx) : EndpointAst
        +visitRoute(ctx) : RouteAst
        +visitFuel(ctx) : FuelAst
        +visitCoordinate(ctx) : CoordinateAst
    }

    class FlightPlanSemanticValidator <<domain service>> {
        +validate(plan : FlightPlanAst) : List<ParseError>
        -validateLegs(plan, errors)
        -validateRouteCoherence(plan, errors)
        -validateNoAirportVisitedTwice(plan, errors)
        -validateDateTime(date, time, ctx, errors)
    }

    class ParseResult {
        -ast : FlightPlanAst
        -errors : List<ParseError>
        +isValid() : boolean
        +ast() : Optional<FlightPlanAst>
        +errors() : List<ParseError>
        +{static} valid(ast) : ParseResult
        +{static} invalid(errors) : ParseResult
    }

    class ParseError <<record>> {
        +line : int
        +column : int
        +message : String
        +offendingSymbol : String
    }
}

package "DSL AST" {
    class FlightPlanAst <<record>> {
        +identifier : String
        +flightType : FlightType
        +legs : List<LegAst>
    }

    class LegAst <<record>> {
        +departure : EndpointAst
        +arrival : EndpointAst
        +route : RouteAst
        +segments : List<SegmentAst>
        +fuel : FuelAst
    }

    class SegmentAst <<record>> {
        +from : CoordinateAst
        +to : CoordinateAst
        +altitudeMeters : double
        +widthMeters : double
        +windSpeed : double
        +windDirection : double
    }

    enum FlightType {
        REGULAR
        CHARTER
    }
}

package "Domain Layer" {
    class FlightPlan <<entity, aggregate root>> {
        -designator : FlightPlanDesignator
        -flightType : String
        -status : FlightPlanStatus
        -dslContent : String
        +{static} fromDsl(ast, dslContent) : FlightPlan
        +designator() : String
        +flightType() : String
        +status() : FlightPlanStatus
        +dslContent() : String
        +identity() : FlightPlanDesignator
        +sameAs(other) : boolean
    }

    class FlightPlanDesignator <<value object, EmbeddedId>> {
        -value : String
        +{static} valueOf(code : String) : FlightPlanDesignator
        +toString() : String
    }

    enum FlightPlanStatus {
        DRAFT
        VALIDATED
        TESTED
    }
}

package "Repository Layer" {
    interface FlightPlanRepository {
    }
    class InMemoryFlightPlanRepository
    class JpaFlightPlanRepository
}

package "EAPLI Framework" <<frame>> {
    class AuthorizationService
}

CreateFlightPlanFromFileUI ..> CreateFlightPlanFromFileController : uses
CreateFlightPlanFromFileController ..> AuthorizationService : checks PILOT role
CreateFlightPlanFromFileController ..> FlightPlanParserFacade : parse(dslContent)
CreateFlightPlanFromFileController ..> FlightPlanRepository : save(flightPlan)
CreateFlightPlanFromFileController ..> FlightPlan : fromDsl(ast, dslContent)

FlightPlanParserFacade ..> FlightPlanValidationListener : walk(listener, root)
FlightPlanParserFacade ..> FlightPlanAstBuilderVisitor : visit(root.flight())
FlightPlanParserFacade ..> FlightPlanSemanticValidator : validate(ast)
FlightPlanParserFacade ..> ParseResult : returns

ParseResult *-- FlightPlanAst
ParseResult *-- ParseError

FlightPlanAst *-- LegAst
FlightPlanAst --> FlightType
LegAst *-- SegmentAst

FlightPlan --> FlightPlanStatus
FlightPlan --> FlightPlanDesignator

FlightPlanRepository <|.. InMemoryFlightPlanRepository
FlightPlanRepository <|.. JpaFlightPlanRepository

@enduml
